<resources>
    <string name="app_name">Inventory</string>
    <string name="empty_text">No products. Press the + button to add a product.</string>
    <string name="sale_button">sale</string>
    <string name="name_text">Product Name:</string>
    <string name="quantity_text">Quantity:</string>
    <string name="price_text">Price (£):</string>
    <string name="title_add">Add a Product</string>
    <string name="title_edit">Edit Product</string>
    <string name="action_delete_all_entries">Delete All Products</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="toast_name_invalid">Please enter a product name.</string>
    <string name="toast_price_invalid">Please enter a valid price.</string>
    <string name="toast_quantity_invalid">Please enter a valid number of products.</string>
    <string name="toast_email_invalid">Please enter a valid email address.</string>
    <string name="toast_no_sale">No product left for sale.</string>
    <string name="toast_insert_failed">Insert failed.</string>
    <string name="toast_data_saved">Data saved successfully.</string>
    <string name="toast_delete_failed">Delete failed.</string>
    <string name="toast_delete_successful">Delete successful.</string>
    <string name="delete_dialog_msg">Are you sure to delete?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="unsaved_changes_dialog_msg">Keep your changes before leave?</string>
    <string name="discard">Discard changes</string>
    <string name="keep_editing">Stay here</string>
    <string name="id">Product ID:</string>
    <string name="no_of_products">Amount of product(s)</string>
    <string name="sold_button">sold</string>
    <string name="receive_button">received</string>
    <string name="default_amount">1</string>
    <string name="image_text">Product image:</string>
    <string name="load_image_button">Load a new image</string>
    <string name="order_button">Order more products</string>
    <string name="contact_text">Supplier\'s Email:</string>
    <string name="review_quantity_sold">Please review amount of products sold. Quantity requires to be positive.</string>
    <string name="send_email">Send Email</string>
    <string name="update_successful">Update successful.</string>
    <string name="update_fail">Update fail.</string>
</resources>
