<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
    android:padding="12dp">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:id="@+id/product_layout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name_text"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/name_edit"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quantity_text"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/quantity_edit"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/price_text"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/price_edit"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/sale_button"
        android:id="@+id/sale_button"
        android:gravity="center"/>

</LinearLayout>